# updatePokemonDom+ searchPokemon - functions
1) updatePokemonDom-
The function is based on the object "PokemonObject" and based on the information in which it updates the relevant DOM for the selected Pokemon.

2) createTypesList-
The function gets an array with string types. For each type in the array creates an option type object and makes a append  child to the relevant object.

3) cleanTypesList-
The function takes all option-type objects and deletes them.

4) searchPokemon -
The function is a handler for clicking the Search button. It sends a GET request to the API and receives Pokemon information based on the search input. It then updates the object "PokemonObject" and calls the function "updatePokemonDom" in order to update the DOM.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <label id="name"></label>
             </li>
             <li>Hight: 
-                <label id="hight"></label>
+                <label id="height"></label>
             </li>
             <li>Weight: 
                 <label id="weight"></label>
@@ -45,7 +45,7 @@
                 <select id="typeListNames"></select>
             </li>
             <li>Image:
-                <img id="pokemon" src="" class="img-thumbnail" alt="pokemon-picture"> 
+                <img id="pokemonImg" src="" class="img-thumbnail" alt="pokemon-picture"> 
             </li>
         </ul>
     </div>
