--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
                 <label id="weight"></label>
             </li>
             <li>Type: 
-                <select id="typeList"></select>
-                <select id="typeListNames"></select>
+                <select id="typeList">
+                    <option id="placeholderType">Select Type</option>
+                </select>
+                <select id="typeListNames">
+                    <option id="placeholderName">Select Polkemon</option>
+                </select>
             </li>
-            <li>Image:
+            <li>
                 <img id="pokemonImg" src="" class="img-thumbnail" alt="pokemon-picture"> 
             </li>
         </ul>
