# Search next and previous buttons
1)movePokemon -
The function checks which of the buttons is pressed and uses the object ... in order to locate the ID of the next Pokemon or of the previous Pokemon.
If we click forward at the end of the list we will reach the first Pokemon and so on in the opposite direction.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         </button>
     </div>
 
+    
     <div id="answer div">
+        <button id="previous-btn" class="move-btn">⏪</button>
+        <button id="next-btn" class="move-btn">⏩</button>
         <ul class="pokemon-card">
             <li class="img-area">
                 <!--class="img-thumbnail"alt="pokemon-picture"-->
@@ -54,6 +57,7 @@
             </li>
         </ul>
     </div>
+
 
     <!-- Bootstarp Links -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
