--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul class="pokemon-card">
             <li class="img-area">
                 <!--class="img-thumbnail"alt="pokemon-picture"-->
-                <img id="pokemonImg" src=""> 
+                <img id="pokemonImg" src="./img/pokee.png"> 
             </li>
             <li class="name"> 
                 <label id="name"></label></br>
