# Change type list display
The list is displayed using span elements inside a div type container.
With each click on one of the types the list of names below will be updated.

--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
                 <label class="label">Weight</label>
             </li>
             <li>Type: 
-                <select id="typeList">
-                    <option id="placeholderType">Select Type</option>
-                </select></br>
+                <div id="typeList"></div>
                 <select id="typeListNames">
-                    <option id="placeholderName">Select Polkemon</option>
+                    <option id="placeholderName">More Pokemons with this type</option>
                 </select>
             </li>
         </ul>
