--- a/index.html
+++ b/index.html
@@ -21,14 +21,23 @@
 
     <h1><img id="header-Img" src="./img/Pokédex_logo.png"></h1>
 
+    <input type="text" placeholder="your user name" id="userName">
+
     <div id="serach-div">
+        <input id="searchInputId" type="text" 
+        placeholder="🔎Search pokemon by Id here..." name="searchID">
 
-        <input id="searchInput" type="text" 
-        placeholder="🔎Search your favorite pokemon here..." name="search">
-
-        <button id = "search-btn" >
+        <button id = "search-id-btn" >
             <img src="./img/logo-icon.png">
-            Search
+            Search By Id
+        </button>
+
+        <input id="searchInputName" type="text" 
+        placeholder="🔎Search pokemon by name here..." name="searchName">
+
+        <button id = "search-name-btn" >
+            <img src="./img/logo-icon.png">
+            Search By Name
         </button>
 
     </div>
@@ -62,6 +71,9 @@
             
             <li>Type: 
                 <div id="typeList"></div>
+            </li>
+            <li>Abilities: 
+                <div id="abilitiesList"></div>
             </li>
         </ul>
     </div>
