# Enter user name
You can click on the save button which will save the username you use, if you want to change click on change and then save again.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 
     <h1><img id="header-Img" src="./img/Pokédex_logo.png"></h1>
 
-    <input type="text" placeholder="your user name" id="userName">
+    <div id="userNameContainer">
+        <label>UserName: 🦸‍♂️🦸‍♀️</label></br>
+        <input type="text" placeholder="your user name" id="userName">
+        <button id="save-btn">Save💾</button>
+        <button id="change-btn">Change🔄</button>
+    </div></br>
     <!-- SEARCH BY ID -->
     <div id="serach-div">
         <input id="searchInputId" type="text" 
