--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li>Type: 
                 <div id="typeList"></div>
             </li>
-            <li>Abilities: 
+            <li class="abilitiesList">Abilities: 
                 <div id="abilitiesList"></div>
             </li>
             <li>
